# testing-workshop

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docs/: test.md
sql/: schema.sql
src/: database.py  discount.py  main.py  plan.py  quote.py  repository.py
tests/: conftest.py  test_api.py  test_quote.py
